<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.11</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.mitchmele</groupId>
	<artifactId>musicbrain-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>musicbrain-api</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<gatling.version>3.13.5</gatling.version>
		<gatling-maven-plugin.version>4.9.6</gatling-maven-plugin.version>
		<groovy.version>4.0.23</groovy.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>mockwebserver</artifactId>
			<version>4.12.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>gatling</id>
			<dependencies>
				<dependency>
					<groupId>io.gatling.highcharts</groupId>
					<artifactId>gatling-charts-highcharts</artifactId>
					<version>${gatling.version}</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>io.gatling</groupId>
					<artifactId>gatling-core-java</artifactId>
					<version>${gatling.version}</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>io.gatling</groupId>
					<artifactId>gatling-http-java</artifactId>
					<version>${gatling.version}</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.groovy</groupId>
					<artifactId>groovy</artifactId>
					<version>${groovy.version}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>add-gatling-test-source</id>
								<phase>generate-test-sources</phase>
								<goals>
									<goal>add-test-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>src/gatling/groovy</source>
									</sources>
								</configuration>
							</execution>
							<execution>
								<id>add-gatling-test-resource</id>
								<phase>generate-test-resources</phase>
								<goals>
									<goal>add-test-resource</goal>
								</goals>
								<configuration>
									<resources>
										<resource>
											<directory>src/gatling/resources</directory>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.gmavenplus</groupId>
						<artifactId>gmavenplus-plugin</artifactId>
						<version>3.0.2</version>
						<executions>
							<execution>
								<goals>
									<goal>compileTests</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<testSources>
								<testSource>
									<directory>${project.basedir}/src/gatling/groovy</directory>
									<includes>
										<include>**/*.groovy</include>
									</includes>
								</testSource>
							</testSources>
						</configuration>
					</plugin>
					<plugin>
						<groupId>io.gatling</groupId>
						<artifactId>gatling-maven-plugin</artifactId>
						<version>${gatling-maven-plugin.version}</version>
						<configuration>
							<runMultipleSimulations>true</runMultipleSimulations>
							<jvmArgs>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/java.io=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/java.nio=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens</jvmArg>
								<jvmArg>java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
							</jvmArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
